--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,6 +13,8 @@ body {
 /* EMPIEZA EL HEADER */
 
 header {
+    display: flex;
+    justify-content: space-between;
     grid-area: header;
     width: 100%;
     background-color: #cf4520;
@@ -37,47 +39,62 @@ nav ul li a {
     font-family: 'Source Sans Pro', sans-serif;
     color: #ffffff;
     font-weight: bold;
-    font-size: 1.35rem;
+    font-size: 1.20rem;
 }
 
 .header__logo__imagen {
     width: 18.75rem;
-    margin: 0.625rem;
+    margin: 10px;
 }
 
 /* TERMINA EL HEADER */
 
-/* .gridprincipal {
+.main__biografia {
     display: grid;
-    grid-template-columns: 2fr;
+    grid-template-columns: 2fr 2fr;
     grid-template-areas:
-    "header header"
-    "biografia1 biografia2"
-    "video1 video2"
-    "footer footer";
-} */
+    "imagen texto1";
+    gap: 10px;
+}
+
+.main__cancion {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-areas:
+    "texto2 video";
+}
 
 /* EMPIEZA MAIN BIOGRAFIA */
 
 .main__biografia__imagenn{
-    grid-area: biografia1;
+    grid-area: imagen;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-
 .main__biografia__texto{
-    grid-area: biografia2;
-    /* margin: 2.5rem; */
+    grid-area: texto1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 2.5rem;
 }
 
 .main__biografia__imagen {
-    width: 56.25rem;
-    /* margin: 2.5rem; */
+    display: flex;
+    /* align-items: center;
+    justify-content: center; */
+    width: 40rem;
+    margin: 40px;
 }
 
 h1 {
+    display: flex;
     font-size: 3.438rem;
     font-weight: bolder;
-    /* margin: 20px; */
+    margin: 10px;
 }
 
 .main__biografia__p {
@@ -90,40 +107,46 @@ h1 {
 /* EMPIEZA MAIN CANCION */
 
 .videoprueba {
-    grid-area: video2;
+    grid-area: video;
+    display: flex;
+    justify-content: center;
 }
 
 .main__cancion {
-    /* display: flex;
-    justify-content: space-around; */
-    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
 }
 
 .main__cancion__prueba {
-    grid-area: video1;
+    grid-area: texto2;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .main__cancion__titulo {
-    font-size: 45px;
+    display: flex;
+    font-size: 2.8rem;
     font-weight: bolder;
 
 }
 .main__cancion__subtitulo {
-    font-size: 30px;
+    font-size: 1.5rem;
     margin: 5px;
 }
 
 .main__cancion__subtitulo2 {
-    font-size: 25px;
+    font-size: 1.3rem;
     margin: 10px;
 }
 
 .main__botonspotify {
     min-width: 130px;
-    height: 50px;
+    height: 3.125rem;
     color: #fff;
-    padding: 10px 40px;
+    padding: 0.6rem 2.5rem;
     font-weight: bold;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -137,7 +160,7 @@ h1 {
     font-family: 'Barlow', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bolder;
     margin: 10px;
 }
@@ -149,12 +172,15 @@ h1 {
 /* EMPIEZA EL FOOTER */
 
 footer {
+    display: flex ;
+    justify-content: space-between;
+    align-items: center;
     grid-area: footer;
     font-family: 'Barlow', sans-serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Source Sans Pro', sans-serif;
     color: white;
-    font-size: 15px;
+    font-size: 0.9rem;
     background-color: #cf4520;
     /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='88' height='24' viewBox='0 0 88 24'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='autumn' fill='%23db856e' fill-opacity='0.4'%3E%3Cpath d='M10 0l30 15 2 1V2.18A10 10 0 0 0 41.76 0H39.7a8 8 0 0 1 .3 2.18v10.58L14.47 0H10zm31.76 24a10 10 0 0 0-5.29-6.76L4 1 2 0v13.82a10 10 0 0 0 5.53 8.94L10 24h4.47l-6.05-3.02A8 8 0 0 1 4 13.82V3.24l31.58 15.78A8 8 0 0 1 39.7 24h2.06zM78 24l2.47-1.24A10 10 0 0 0 86 13.82V0l-2 1-32.47 16.24A10 10 0 0 0 46.24 24h2.06a8 8 0 0 1 4.12-4.98L84 3.24v10.58a8 8 0 0 1-4.42 7.16L73.53 24H78zm0-24L48 15l-2 1V2.18A10 10 0 0 1 46.24 0h2.06a8 8 0 0 0-.3 2.18v10.58L73.53 0H78z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
 }
@@ -162,7 +188,7 @@ footer {
 .footer__redes {
     grid-area: footer2;
     margin: 15px;
-    font-size: 20px;
+    font-size: 0.9rem;
 }
 
 footer div ul {
@@ -177,13 +203,14 @@ footer div ul li {
 }
 
 footer div ul li a img {
-    width: 40px;
+    display: flex;
+    width: 2rem;
 }
 
 .footer__derechos {
     grid-area: footer1;
     margin: 10px;
-    margin-left: 30px  ;
+    margin-left: 20px  ;
 }
 
 .footer__derechos h3 {
@@ -210,7 +237,7 @@ footer div ul li a img {
     align-items: center;
     justify-content: space-around;
     margin: 20px;
-    width: 600px;
+    width: 37rem;
 
 }
 
@@ -220,7 +247,7 @@ footer div ul li a img {
     align-items: center;
     justify-content: space-around;
     margin: 20px;
-    width: 600px;
+    width: 37rem;
 }
 
 .main__ambosdiscos {
@@ -261,8 +288,9 @@ footer div ul li a img {
 }
 
 .main__tourimagen {
+    display: flex;
     width: 100%;
-    height: 800px;
+    height: 50rem;
     /* margin-top: 10px; */
 }
 
@@ -430,7 +458,7 @@ option {
 
 .merchtitulo {
     grid-area: titulo;
-    font-size: 50px;
+    font-size: 3rem;
     font-weight: bolder;
     margin: 10px;
 }
@@ -447,9 +475,238 @@ option {
 }
 
 .tienda__producto__imagen{ 
-    width: 400px;
+    display: flex;
+    width: 20rem;
 }
 
 .tienda__producto h3 {
-    font-size: 30px;
+    font-size: 1.8rem;
+}
+
+@media (min-width: 320px) and (max-width: 540px){
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        grid-area: header;
+        width: 100%;
+        background-color: #cf4520;
+    }
+    nav ul li {
+        padding: 8px;
+    }
+
+    nav ul li a {
+        font-size: 0.9rem;
+    }
+    
+    .main__biografia{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 5px;
+    }
+    .main__biografia {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "imagen"
+        "texto1";
+        /* gap: 10px; */
+    }
+    .main__biografia__imagen {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 18rem;
+        margin: 1.8rem;
+    }
+
+    .main__biografia__texto{
+        grid-area: texto1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 20px;
+        margin-top: 0px;
+    }
+
+    .main__biografia__p {
+        font-size: 1.25rem;
+        line-height: 1.3;
+        margin: 10px;
+    }
+
+    .main__cancion {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "texto2"
+        "video";
+    }
+
+    .videoprueba iframe {
+        width: 20rem;
+        height: 15rem;
+        margin: 5px;
+    }
+
+    footer div ul li {
+        padding: 5px;
+    }
+
+    /* TERMINA INDEX */
+
+    .main__ambosdiscos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .main__discos__hs {
+        width: 20rem;
+    }
+    
+    .main__discos__fineline {
+        width: 20rem;
+    }
+
+    /* TERMINA DISCOGRAFIA */
+
+    .tienda {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "titulo"
+        "producto1"
+        "producto2" 
+        "producto3"
+        "producto4"
+        "producto5"
+        "producto6"
+        "producto7" 
+        "producto8"
+    }
+
+    .main__contacto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .cuadro {
+        border: 0px
+
+    }
+
+    .main__tourimagen {
+        height: 20rem;
+    }
+}
+
+@media (min-width: 541px) and (max-width: 720px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        grid-area: header;
+        width: 100%;
+        background-color: #cf4520;
+    }
+    .main__biografia{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 5px;
+    }
+    .main__biografia {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "imagen"
+        "texto1";
+        /* gap: 10px; */
+    }
+    .main__biografia__imagen {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 18rem;
+        margin: 1.8rem;
+    }
+
+    .main__biografia__texto{
+        grid-area: texto1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 20px;
+        margin-top: 0px;
+    }
+
+    .main__biografia__p {
+        font-size: 1.25rem;
+        line-height: 1.3;
+        margin: 10px;
+    }
+
+    .main__cancion {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas:
+        "texto2"
+        "video";
+    }
+    .videoprueba iframe {
+        width: 20rem;
+        height: 15rem;
+        margin: 5px;
+    }
+
+    .main__ambosdiscos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .main__discos__hs {
+        width: 30rem;
+    }
+    
+    .main__discos__fineline {
+        width: 30rem;
+    }
+
+    .tienda {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "titulo titulo"
+        "producto1 producto2" 
+        "producto3 producto4"
+        "producto5 producto6"
+        "producto7 producto8"
+    }
+
+    .main__contacto {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .main__tourimagen {
+        height: 25rem;
+    }
+
 }
