--- a/css/estilos.css
+++ b/css/estilos.css
@@ -205,6 +205,9 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   color: #cf4520; }
 
+.disclaimer {
+  display: none !important; }
+
 /* EMPIEZA MAIN BIOGRAFIA */
 h1 {
   display: flex;
@@ -321,13 +324,14 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 2px solid #cf4520;
     border-radius: 15px;
     padding: 0.625rem;
     font-weight: bolder;
-    margin: 0.375rem; }
-    .main__fechas li input {
-      margin-right: 2.5rem; }
+    margin: 0.375rem;
+    border: solid #cf4520 2px; }
+
+.main__fechas li input {
+  margin-right: 2.5rem; }
 
 .main__tourimagen {
   display: flex;
@@ -397,21 +401,20 @@ textarea {
   font-weight: bolder;
   font-size: 18px;
   padding: 8px;
-  border: #cf4520 solid 2px;
-  border-radius: 1.25rem; }
+  border-radius: 1.25rem;
+  border: solid #cf4520 2px; }
 
 .botonenviar {
   display: flex;
   justify-content: center; }
 
 .cuadro {
-  border: 4px solid #cf4520;
   margin: 1.25rem;
   padding: 1.25rem;
-  border-radius: 1.25rem; }
+  border-radius: 1.25rem;
+  border: solid #cf4520 4px; }
 
 input {
-  border: 2px solid #cf4520;
   padding: 8px;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -420,7 +423,8 @@ input {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Source Sans Pro', sans-serif;
   color: #cf4520;
-  font-weight: bolder; }
+  font-weight: bolder;
+  border: solid #cf4520 2px; }
 
 option {
   border: #cf4520; }
@@ -441,12 +445,3 @@ option {
   font-size: 3rem;
   font-weight: bolder;
   margin: 0.625rem; }
-
-.tienda__producto {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid #cf4520;
-  margin: 0.625rem;
-  border-radius: 0.625rem; }
