--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'helpers';
 @import 'header';
 @import 'footer';
 @import 'mediaqueries';
@@ -15,6 +16,7 @@ body {
     color: $color-principal;
 }
 
+.disclaimer {display: none!important;}
 /* EMPIEZA MAIN BIOGRAFIA */
 
 h1 {
@@ -152,15 +154,16 @@ h1 {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        border: 2px solid $color-principal;
         border-radius: 15px;
         padding: 0.625rem;
         font-weight: bolder;
         margin: 0.375rem;
-        input {
-            margin-right: 2.5rem;
-        }
+        @include bordes (2px, solid, #cf4520)
     }
+}
+
+.main__fechas li input {
+    margin-right: 2.5rem;
 }
 
 .main__tourimagen {
@@ -243,8 +246,8 @@ textarea {
     font-weight: bolder;
     font-size: 18px;
     padding: 8px;
-    border: $color-principal solid 2px;
     border-radius: 1.25rem;
+    @include bordes (2px, solid, #cf4520)
 }
 
 .botonenviar {
@@ -253,14 +256,13 @@ textarea {
 }
 
 .cuadro {
-    border: 4px solid $color-principal;
     margin: 1.25rem;
     padding: 1.25rem;
     border-radius: 1.25rem;
+    @include bordes (4px, solid, #cf4520)
 }
 
 input  {
-    border: 2px solid $color-principal;
     padding: 8px;
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -270,6 +272,7 @@ input  {
     font-family: 'Source Sans Pro', sans-serif;
     color: $color-principal;
     font-weight: bolder;
+    @include bordes (2px, solid, #cf4520)
 }
 
 option {
@@ -297,14 +300,4 @@ option {
     font-size: 3rem;
     font-weight: bolder;
     margin: 0.625rem;
-}
-
-.tienda__producto {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid $color-principal;
-    margin: 0.625rem;
-    border-radius: 0.625rem;
 }
