--- a/sass/style.scss
+++ b/sass/style.scss
@@ -132,6 +132,7 @@ h1 {
 
 .main__ambosdiscos {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     h3 {
