--- a/sass/style.scss
+++ b/sass/style.scss
@@ -207,7 +207,7 @@ h1 {
 
 .main__contacto {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     &__formulario {
         display: flex;
         flex-direction: column;
@@ -230,6 +230,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin-top: 0.625rem;
     label {
         margin: 0.625rem;
